[gd_scene load_steps=17 format=3 uid="uid://dbm1npua7fq50"]

[ext_resource type="PackedScene" uid="uid://djbrxyh5s8j2o" path="res://zdm2.glb" id="1"]
[ext_resource type="PackedScene" uid="uid://c2lbhsefub1o5" path="res://cube.glb" id="3"]
[ext_resource type="VoxelGIData" uid="uid://duykbpl6evu0r" path="res://test_VoxelGIData.res" id="3_1netx"]
[ext_resource type="LightmapGIData" uid="uid://bqpu20db0gmry" path="res://zdm2_all.lmbake" id="4_7vqwx"]
[ext_resource type="Script" uid="uid://b33gdc1jklq5" path="res://test.gd" id="5"]
[ext_resource type="LightmapGIData" uid="uid://brs3ywo1ouol0" path="res://zdm2_indirect.lmbake" id="5_14bmd"]
[ext_resource type="Script" uid="uid://bbfpss6nqbjeu" path="res://camera.gd" id="6"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_30v8t"]
sky_top_color = Color(0.568627, 0.698039, 0.807843, 1)
sky_horizon_color = Color(0.672549, 0.704902, 0.734314, 1)
ground_bottom_color = Color(0.121569, 0.121569, 0.129412, 1)
ground_horizon_color = Color(0.672549, 0.704902, 0.734314, 1)

[sub_resource type="Sky" id="Sky_4q314"]
sky_material = SubResource("ProceduralSkyMaterial_30v8t")

[sub_resource type="Environment" id="Environment_bau0c"]
background_mode = 2
sky = SubResource("Sky_4q314")
tonemap_mode = 4
ssao_intensity = 1.0
sdfgi_cascades = 3
sdfgi_min_cell_size = 0.25
sdfgi_cascade0_distance = 16.0
sdfgi_max_distance = 128.0
sdfgi_y_scale = 0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1n5k1"]
emission_enabled = true
emission = Color(1, 1, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="BoxMesh" id="8"]

[sub_resource type="Gradient" id="Gradient_3s4nj"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uu8pf"]
gradient = SubResource("Gradient_3s4nj")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0.01)

[sub_resource type="SphereMesh" id="2"]
radius = 1.0
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7doxp"]
albedo_color = Color(0.811765, 1, 0.764706, 1)
metallic = 1.0
roughness = 0.0

[node name="Test" type="Node3D"]
script = ExtResource("5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bau0c")

[node name="Zdm2NoLightmap" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="Zdm2LightmapAll" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
visible = false

[node name="Zdm2LightmapIndirect" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
visible = false

[node name="VoxelGI" type="VoxelGI" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 6, 2.5)
size = Vector3(78, 37, 60)
data = ExtResource("3_1netx")

[node name="LightmapGIAll" type="LightmapGI" parent="."]
visible = false
quality = 3
light_data = ExtResource("4_7vqwx")

[node name="LightmapGIIndirect" type="LightmapGI" parent="."]
visible = false
quality = 3
light_data = ExtResource("5_14bmd")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.889832, -0.251497, 0.380722, 0, 0.834387, 0.551179, -0.456289, -0.490456, 0.742464, 4.47302, 6.47568, 8.72305)
shadow_enabled = true
shadow_bias = 0.04
shadow_blur = 2.0
directional_shadow_blend_splits = true
directional_shadow_fade_start = 1.0
directional_shadow_max_distance = 75.0

[node name="GrateOmniLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.9461, -1.33084, -5.52646)
light_color = Color(1, 0.905882, 0.470588, 1)
shadow_enabled = true
shadow_bias = 0.03
shadow_blur = 2.0
omni_range = 10.0
omni_attenuation = 2.0

[node name="GarageOmniLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.6053, -1.96042, -13.798)
light_color = Color(0.984314, 0.552941, 1, 1)
light_energy = 15.0
shadow_enabled = true
shadow_bias = 0.03
shadow_blur = 2.0
omni_range = 10.0
omni_attenuation = 2.0

[node name="CornerSpotLight" type="SpotLight3D" parent="."]
transform = Transform3D(0.909405, -0.0463933, 0.413316, -0.290385, -0.782269, 0.551118, 0.297756, -0.62121, -0.724872, -14.0594, -1.81824, 12.3035)
light_color = Color(1, 0, 0, 1)
light_energy = 14.77
spot_range = 15.0
spot_attenuation = 2.0
spot_angle_attenuation = 0.5

[node name="GlowingBox" parent="." instance=ExtResource("3")]
transform = Transform3D(1.4, 0, 0, 0, 1, 0, 0, 0, 0.25, -0.681709, -0.108265, 25.4051)

[node name="Cube" parent="GlowingBox" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_1n5k1")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(-0.997523, -0.00719588, 0.0699685, -8.94368e-09, 0.994753, 0.102305, -0.0703375, 0.102052, -0.992289, 11.7976, 1.49898, 9.54247)
script = ExtResource("6")

[node name="Box" type="MeshInstance3D" parent="Camera"]
transform = Transform3D(0.999999, -5.12227e-09, 9.68575e-08, 2.79397e-09, 0.999999, 8.9407e-08, 7.45058e-09, -1.11759e-07, 0.999999, -1.4, -0.999998, -3.99998)
layers = 2
mesh = SubResource("8")

[node name="BlobShadow" type="Decal" parent="Camera/Box"]
transform = Transform3D(-0.997524, -0.00613033, -0.0700699, -0.00719589, 0.999863, 0.0149653, 0.0699686, 0.015432, -0.997431, 0.0499506, -0.507917, -0.035697)
size = Vector3(2.5, 4, 2.5)
texture_albedo = SubResource("GradientTexture2D_uu8pf")
albedo_mix = 0.9
upper_fade = 1.0
lower_fade = 1.0
cull_mask = 1048573

[node name="ReflectiveSphere" type="MeshInstance3D" parent="Camera"]
transform = Transform3D(-0.997523, -8.41886e-09, -0.0703376, -0.00719589, 0.994753, 0.102052, 0.0699685, 0.102305, -0.992289, 0.16733, -1.22931, -3.81225)
layers = 2
mesh = SubResource("2")
surface_material_override/0 = SubResource("StandardMaterial3D_7doxp")

[node name="ReflectionProbe" type="ReflectionProbe" parent="Camera/ReflectiveSphere"]
transform = Transform3D(1, -8.38189e-09, -8.9407e-08, 5.58791e-09, 1, -5.21541e-07, 4.47035e-08, 1.11759e-07, 1, 0, 0, 0)
max_distance = 50.0
size = Vector3(22, 22, 22)
box_projection = true
enable_shadows = true
ambient_mode = 0

[node name="BlobShadow" type="Decal" parent="Camera/ReflectiveSphere"]
transform = Transform3D(1, -1.37668e-14, 0, 1.33227e-15, 1, 1.42109e-14, 0, 0, 1, 0, -1, -1.90735e-06)
size = Vector3(2.5, 4, 2.5)
texture_albedo = SubResource("GradientTexture2D_uu8pf")
albedo_mix = 0.9
upper_fade = 1.0
lower_fade = 1.0
cull_mask = 1048573

[node name="GIMode" type="Label" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 263.0
offset_bottom = 42.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Global illumination: None (Fastest)"

[node name="ReflectionProbeMode" type="Label" parent="."]
offset_left = 16.0
offset_top = 48.0
offset_right = 148.0
offset_bottom = 74.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Reflection probe: Disabled - Using environment, VoxelGI or SDFGI reflections (Fast)"

[node name="SSILMode" type="Label" parent="."]
offset_left = 16.0
offset_top = 80.0
offset_right = 365.0
offset_bottom = 106.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Screen-space lighting effects: Disabled (Fast)"

[node name="Label" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -120.0
offset_right = 537.0
offset_bottom = -16.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Space: Cycle between GI modes
R: Cycle between reflection probe modes
F: Cycle between screen-space lighting effect modes
Escape or F10: Toggle mouse capture"

[editable path="GlowingBox"]
